--- a/css/style.css
+++ b/css/style.css
@@ -1420,7 +1420,7 @@ position: absolute;
     padding-bottom: 52px;
 }
 .rightpart {
-    margin-top: 75px;
+    margin-top: 68px;
     float: right;
     width: 50%;
 }
@@ -3045,4 +3045,29 @@ article-block .article-block-text {
     margin: 0 13px 0 4px;
     vertical-align: text-top;
 
+}
+.calc-rooms {
+    margin: 50px 0 0 0;
+}
+.block-bed {
+    width: 50px;
+    height: 50px;
+    border: 1px solid blueviolet;
+    float: left;
+}
+.inner-rooms h3 {
+    float: left;
+    margin: 15px 0 0 0;
+}
+.inner-bathrooms h3 {
+    float: left;
+    margin: 15px 0 0 0;
+}
+.calc-dirty h3 {
+    float: left;
+    margin: 15px 0 0 0 ;
+}
+.calc-clean h3 {
+    float: left;
+    margin: 15px 0 0 0;
 }
