--- a/css/style.css
+++ b/css/style.css
@@ -1047,13 +1047,15 @@ background-color: #f2fdff;;
     margin: 37px 0 0 0;
 }
 .section_box {
+    box-sizing: border-box;
     display: inline-block;
-    max-width: 217px;
-    width: 25%;
+    width: 217px;
+    /*width: 25%;*/
     vertical-align: top;
     /* margin: 0 -10px 33px 0; */
     padding: 0 23px 40px 0;
 }
+
 
 .section_box p {
     font-family: 'Lato', sans-serif;
@@ -1200,13 +1202,13 @@ background-color: #f2fdff;;
 .checkbox-design input + label::before {
     content: '';
     position: absolute;
-    left: 0;
+    left: -1px;
     top: 50%;
     transform: translateY(-50%);
     display: inline-block;
     width: 17px;
     height: 17px;
-    border: 1px solid #da8913;
+    border: 2px solid #555963;
     border-radius: 50%;
 }
 .checkbox-design input + label::after {
@@ -1222,7 +1224,7 @@ background-color: #f2fdff;;
     border-radius: 50%;
 }
 .checkbox-design input:checked + label::after {
-    background: #da8913;
+    background: #555963;
 }
 
 .payment-radio {
@@ -1252,13 +1254,13 @@ background-color: #f2fdff;;
     display: inline-block;
     width: 17px;
     height: 17px;
-    border: 1px solid #da8913;
+    border: 2px solid #555963;
     border-radius: 50%;
 }
 .payment-radio input + label::after {
     content: '';
     position: absolute;
-    left: 4px;
+    left: 5px;
     top: 50%;
     transform: translateY(-50%);
     display: inline-block;
@@ -1269,7 +1271,7 @@ background-color: #f2fdff;;
 }
 
 .payment-radio input:checked+label::after {
-    background: #da8913;
+    background: #555963;
 }
 
 
@@ -1316,7 +1318,7 @@ position: absolute;
     left: 0;
     width: 17px;
     height: 17px;
-    border: 2px solid #45474b;
+    border: 2px solid #555963;
    /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
     background: transparent;
 }
@@ -1327,7 +1329,7 @@ position: absolute;
     left: 0;
     width: 17px;
     height: 17px;
-    border: 2px solid #45474b;
+    border: 2px solid #555963;
     background: transparent;
 }
 .checkbox-accept:not(checked) + label:before {
@@ -1337,7 +1339,7 @@ position: absolute;
     left: 0;
     width: 17px;
     height: 17px;
-    border: 2px solid #45474b;
+    border: 2px solid #555963;
     /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
     background: transparent;
 }
@@ -1349,7 +1351,7 @@ position: absolute;
     left: 0;
     width: 17px;
     height: 17px;
-    border: 2px solid #45474b;
+    border: 2px solid #555963;
     background: transparent;
     box-shadow: 0 2px 5px rgba(0,0,0,.3);
     transition: all .2s;
@@ -1361,7 +1363,7 @@ position: absolute;
     left: 0;
     width: 17px;
     height: 17px;
-    border: 2px solid #45474b;
+    border: 2px solid #555963;
     /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
     background: transparent;
     box-shadow: 0 2px 5px rgba(0,0,0,.3);
@@ -1374,21 +1376,27 @@ position: absolute;
     left: 0;
     width: 17px;
     height: 17px;
-    border: 2px solid #45474b;
+    border: 2px solid #555663;
     /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
     background: transparent;
-    box-shadow: 0 2px 5px rgba(0,0,0,.3);
+    /*box-shadow: 0 2px 5px rgba(0,0,0,.3);*/
     transition: all .2s; /* анимация, чтобы чекбокс переключался плавно */
 }
 /* Меняем фон чекбокса, когда он включен. */
 .checkbox-create-account:checked + label:before {
-     background: #da8913;
+     background: #555963;
  }
 .checkbox-remember:checked + label:before {
-    background: #da8913;
+    background: #555963;
 }
 .checkbox-accept:checked + label:before {
-    background: #da8913;
+    /*background: #555963;*/
+    content: '';
+    background-image: url("../img/rectangle45.png");
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat;
 }
 /* Сдвигаем переключатель чекбокса, когда он включен. */
 /*.checkbox:checked + label:after {
@@ -1402,7 +1410,7 @@ position: absolute;
     box-shadow: 0 0 0 3px rgba(255,255,0,.5);
 }
 .checkbox-accept:focus + label:before {
-    box-shadow: 0 0 0 3px rgba(255,255,0,.5);
+    /*box-shadow: 0 0 0 3px rgba(255,255,0,.5);*/
 }
 
 .proceed-checkbox a {
@@ -1420,7 +1428,7 @@ position: absolute;
     padding-bottom: 52px;
 }
 .rightpart {
-    margin-top: 68px;
+    margin-top: 75px;
     float: right;
     width: 50%;
 }
@@ -2020,7 +2028,7 @@ position: absolute;
     margin: 75px 50px;
 }
 #wrap-login .transp-back-wrap-login {
-    width: 460px;
+    max-width: 460px;
     height: 100%;
     margin-top: -92px;
     margin-left: -67px;
