--- a/css/style.css
+++ b/css/style.css
@@ -1443,7 +1443,7 @@ position: absolute;
     padding-bottom: 52px;
 }
 .rightpart {
-    margin-top: 75px;
+    margin-top: 68px;
     float: right;
     width: 50%;
 }
@@ -3077,10 +3077,11 @@ article-block .article-block-text {
     margin: 50px 0 0 0;
 }
 .block-bed {
-    width: 50px;
-    height: 50px;
+    padding: 0 0 0 0;
     border: 1px solid blueviolet;
     float: left;
+    margin: 0 0 0 0;
+    border-radius: 10px;
 }
 .inner-rooms h3 {
     float: left;
@@ -3097,4 +3098,7 @@ article-block .article-block-text {
 .calc-clean h3 {
     float: left;
     margin: 15px 0 0 0;
+}
+.block-bed-label {
+    float: left;
 }
