--- a/css/style.css
+++ b/css/style.css
@@ -688,6 +688,20 @@ h2 {
     font-size: 19px;
     color: #45474b;
 }
+.name-book a {
+    font-family: 'Ramaraja', serif
+    font-size: 19px;
+    line-height: 21px;
+    color: #45474b;
+    width: 150px;
+    display: block;
+}
+.font-book-language {
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+    color: #555963;
+    line-height: 32px;
+}
 .name-book p {
     font-family: 'Amiri', serif;
     font-size: 15px;
@@ -695,6 +709,7 @@ h2 {
 }
 
 .font-book-size {
+    width: 15%;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     color: #555963;
@@ -1300,6 +1315,10 @@ background-color: #f2fdff;;
 в них все нижеследующие стили не сработают. */
 
 /* Прячем оригинальный чекбокс. */
+/*.check-room:not(checked) {*/
+    /*position: absolute;*/
+    /*opacity: 0;*/
+/*}*/
 .checkbox-create-account:not(checked) {
     position: absolute;
     opacity: 0;
@@ -1312,6 +1331,10 @@ background-color: #f2fdff;;
 opacity: 0;
 position: absolute;
 }
+/*.check-room:not(checked) + label {*/
+    /*position: relative;*/
+    /*padding: 0 0 0 35px;*/
+/*}*/
 
 .checkbox-create-account:not(checked) + label {
     position: relative; /* будем позиционировать псевдочекбокс относительно label */
@@ -1456,7 +1479,7 @@ position: absolute;
     padding-bottom: 52px;
 }
 .rightpart {
-    margin-top: 68px;
+    margin-top: 59px;
     float: right;
     width: 50%;
 }
@@ -1630,13 +1653,21 @@ position: absolute;
     width: 100%;
 }
 
+.input-text.has-error .input-text-error {
+    color: red;
+    display: block;
+}
+.input-text.has-success .input-text-error {
+    color: green;
+    display: block;
+}
 .input-text-error {
     display: none;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     padding: 0 0 0 10px;
 }
-.has-error{
+.input-text.has-error{
     visibility: visible;
     color: red;
 }
@@ -1761,7 +1792,7 @@ position: absolute;
     vertical-align: middle;
 }
 .name-book {
-    width: 33%;
+    width: 20%;
 }
 .format {
     width: 30%;
@@ -1799,7 +1830,7 @@ position: absolute;
     background-color: #f5fdff;
 }
 .tr-container td {
-    padding: 25px 25px;
+    padding: 25px 0 0 25px;
     border-bottom: 20px white solid;
 }
 
@@ -2195,6 +2226,7 @@ div.cs-select:focus {
 
 /* Placeholder and selected option */
 .cs-select > span {
+    line-height: 48px;
     font-family: 'Lato', sans-serif;
     color: #959ba1;
     font-size: 16px;
@@ -3114,4 +3146,34 @@ article-block .article-block-text {
 }
 .block-bed-label {
     float: left;
+}
+.inner-formcalc {
+    width: 100%;
+    padding-top: 150px;
+
+}
+.inner-form {
+    width: 80%;
+    float: left;
+}
+.inner-result {
+    width: 20%;
+    float: right;
+}
+#time {
+    color: red;
+    width: 100%;
+    float: left;
+}
+.price-off {
+    width: 100%;
+    float: left;
+}
+#cost {
+    color: red;
+    width: 100%;
+    float: left;
+}
+.result-price h1 {
+    text-align: left;
 }
