--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,7 +24,7 @@
             display: none;
         }
         .background_books {
-           margin-top: 150px;
+           margin-top: 55px;
         }
     }
     @media only screen and (max-width: 992px) {
@@ -421,13 +421,34 @@
             margin-left: 50px;
             margin-right: 50px;
         }
-        ..presentation_text {
+        .presentation_book_img {
+            padding-bottom: 45px;
+        }
+        .presentation_text {
             float: left;
             width: 49%;
-            margin: 35px 10px 35px 35px;
+            margin: 80px 10px 35px 35px;
+        }
+        .book-item {
+            padding-top: 40px;
+        }
+        .popwrites {
+            margin: 130px 0 0 0;
+        }
+        .books {
+            padding-left: 18px;
+            width: 100%;
+            padding-top: 40px;
+            margin: 0 auto;
+        }
+        .style-cover-img {
+            top: 40px;
+            left: 0px;
         }
         .shopfrontmenu {
+            margin: 0 auto;
             width: 95%;
+            padding-top: 40px;
         }
         .section_about_autor {
             width: 35%;
@@ -441,31 +462,47 @@
         .block-literature {
             width: 100%;
         }
-        .img-literature {
-            float: left;
-            width: 50%;
-            padding-left: 10px;
+        .img-literature img {
+            width: 97%;
+            margin: 0 auto;
         }
         .literature_news_autor {
-            margin-top: 1105px;
             float: none;
-            width: 100%;
+            width: 97%;
         }
         .block_news {
-            width: 36%;
+            width: 100%;
+            padding: 0 50px 50px 10px;
             display: inline-block;
-            padding: 0 50px 0 50px;
-            float: none;
-            vertical-align: top;
         }
         .publishers {
-         height: auto;
-            padding-bottom: 360px;
+            height: auto;
+            padding-bottom: 60px;
         }
         .description {
             float: none;
             width: 80%;
             margin: 40px auto;
+        }
+
+        .literature_news {
+            width: 100%;
+            margin: 50px auto;
+        }
+        .discount {
+            width: 100%;
+            text-align: center;
+            margin: 0 auto;
+            padding: 50px 0 100px 0;
+            background-color: white;
+            position: static;
+        }
+        .popular_book {
+            padding: 0 37px 50px 40px;
+        }
+        .background_books {
+            margin-top: 55px;
+            height: auto;
         }
         .partners {
             float: none;
@@ -474,7 +511,9 @@
         }
         .text-literature {
             float: left;
-            width: 46%;
+            width: 100%;
+            margin: 0 auto;
+            padding-bottom: 50px;
         }
         .literature_news ul li {
             width: 100%;
@@ -514,6 +553,7 @@
         }
         .menu_futer {
             width: 95%;
+            padding-bottom: 60px;
         }
         .wrap-footer {
             /*height: 100%;*/
@@ -979,141 +1019,4 @@
             }
 
         }
-
-
-
-
-
-    /*@media all and (max-width: 1024px) {*/
-
-    /*.presentation_book {*/
-    /*float: none;*/
-    /*width: auto;*/
-    /*margin-bottom: 50px;*/
-    /*}*/
-
-    /*.presentation_text {*/
-    /*border: 1px solid grey;*/
-    /*width: auto;*/
-    /*}*/
-
-    /*}*/
-    /*@media all and (max-width: 1150px) {*/
-            /*!*.bookschoice {*!*/
-                /*!*height: 910px;*!*/
-                /*!*float: none;*!*/
-                /*!*margin: 0 auto;*!*/
-            /*!*}*!*/
-
-            /*!*.booktext {*!*/
-                /*!*margin: 0 auto;*!*/
-                /*!*height: 355px;*!*/
-                /*!*float: none;*!*/
-                /*!*width: 500px;*!*/
-            /*!*}*!*/
-
-            /*!*.presentation_books {*!*/
-                /*!*margin-top: 500px;*!*/
-            /*!*}*!*/
-
-            /*!*.presentation_book_img {*!*/
-                /*!*right: -100px;*!*/
-            /*!*}*!*/
-
-            /*!*.coupon-form {*!*/
-                /*!*float: left;*!*/
-                /*!*width: 34%;*!*/
-            /*!*}*!*/
-        /*}*/
-
-        /*@media all and (max-width: 600px) {*/
-            /*.presentation_book {*/
-                /*background-color: #da8913;*/
-            /*}*/
-
-            /*.form-cart {*/
-                /*padding-top: 2px;*/
-            /*}*/
-
-        /*}*/
-        /*@media all and (max-width: 658px) {*/
-
-            /*!*.cart-wrap {*!*/
-                /*!*margin-top: 280px;*!*/
-            /*!*}*!*/
-
-            /*!*.coupon-code input {*!*/
-                /*!*width: 120px;*!*/
-            /*!*}*!*/
-
-            /*!*.coupon-code {*!*/
-                /*!*width: 233px;*!*/
-            /*!*}*!*/
-
-            /*button.btn {*/
-                /*padding: 5px 5px;*/
-            /*}*/
-
-            /*span.proceed-count-font1 {*/
-                /*font-size: 18px;*/
-            /*}*/
-
-            /*span.proceed-count-font2 {*/
-                /*font-size: 21px;*/
-            /*}*/
-
-            /*span.proceed-count-font3 {*/
-                /*font-size: 25px;*/
-            /*}*/
-
-            /*span.proceed-count-font4 {*/
-                /*font-size: 28px;*/
-            /*}*/
-
-            /*.proceed-payment {*/
-                /*float: none;*/
-            /*}*/
-        /*}*/
-
-        /*@media all and (max-width: 600px) and (orientation: landscape) {*/
-            /*.presentation_book {*/
-                /*background-color: chocolate;*/
-            /*}*/
-        /*}*/
-
-        /*@media only screen and (max-width: 768px) {*/
-            /*!*.form-cart {*!*/
-                /*!*padding-top: 2px;*!*/
-            /*!*}*!*/
-
-            /*.button.btn {*/
-                /*padding: 10px 10px;*/
-            /*}*/
-
-            /*!*.coupon-code {*!*/
-                /*!*width: 277px;*!*/
-            /*!*}*!*/
-
-            /*!*.coupon-code input {*!*/
-                /*!*width: 120px;*!*/
-            /*!*}*!*/
-        /*}*/
-
-
-        /* при меньше 500px ) */
-        @media only screen and (max-width: 500px) {
-
-        }
-
-        /* For width 400px and larger: */
-        @media only screen and (min-width: 400px) {
-
-        }
-
-        /* For devices 400px and larger: */
-        @media only screen and (min-device-width: 400px) {
-        }
-
-
-
 
